✨ feat: 添加get 模块

--- a/config.ini
+++ b/config.ini
@@ -4,13 +4,19 @@
 ; docker mode no console 
 ; local mode has a console
 mode=1
-debug=1
+debug=0
 
 [REDIS]
 redis_host=192.168.79.128
 redis_port=24456
 redis_password=123456
 message_queue=MQ
+
+[elasticsearch]
+host=192.168.79.128
+port=9200
+info_index=info
+vuls_index=vuls
 
 [IP_RANGE]
 ip=192.168.79.128-192.168.79.140
