--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,7 @@
 ; local mode has a console
 mode=1
 debug=0
+cli_conf_path=D:\code\vsc\PythonProject\AllNodes\scan_server
 
 [REDIS]
 redis_host=192.168.79.128
